--- a/main.css
+++ b/main.css
@@ -1,4 +1,35 @@
-/* body{backgound-color:aqua
+*{body{backgound-color: rgb aliceblue;
+}
+ 
+font-style: ariel;
+font-size: 20px;
+color: grey;
+text-align: center;
 
-} */
-*{background-
+{
+
+}
+
+h1{  text-align: center;
+    font-size: 30px;
+    color: blue; 
+}
+   
+}
+    /* }
+/* body {
+    background-color: blue; */
+} 
+
+
+h2{
+    text-align: center;
+    
+}
+h3{
+    text-align: center; 
+    
+}
+
+/* <img src="abstract-pixelated-background_1048-7724.jpg" width="400" height="240">
+h1{ */ */
