--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
-*{body{backgound-color: rgb aliceblue;
+*{body{backgound-color: rgb; aliceblue; 
 }
- 
 font-style: ariel;
 font-size: 20px;
 color: grey;
@@ -10,16 +9,14 @@ text-align: center;
 
 }
 
-h1{  text-align: center;
-    font-size: 30px;
-    color: blue; 
+h1{text-align: center; font-size: 30px; color: blue; 
 }
    
-}
+
     /* }
 /* body {
     background-color: blue; */
-} 
+
 
 
 h2{
@@ -32,4 +29,7 @@ h3{
 }
 
 /* <img src="abstract-pixelated-background_1048-7724.jpg" width="400" height="240">
-h1{ */ */
+h1{ */ 
+
+    *body{background: 100px,100px,100px;
+    }
