--- a/main.css
+++ b/main.css
@@ -1,39 +1,76 @@
-*{body backgound-color: rgb; aliceblue; 
+/* /* {body backgound-color: rgb; aliceblue; 
 }
 font-style: ariel;
 font-size: 20px;
 color: grey;
 text-align: center;
+ */
 
 
 
+/* h1{
+    font-style: ariel
+    text-align: center; 
+    font-size: 70px; 
+    color: blue;  */
 
-
-h1{text-align: center; font-size: 30px; color: blue; 
-}
    
 
     /* }
 /* body {
     background-color: blue; */
 
+    /* button {
+        margin:auto;
+        display:block;
+      } */
 
+/* h1{
+    text-align: center;
+    font-size: 50px;
+    color: rgb(87, 102, 187)
+}
 
 h2{
     text-align: center;
-    
+    font-size: 35px;
+    color: rgb(163, 151, 151)
 }
+
 h3{
     text-align: center; 
-    
+    font-size: 25px;
+    color: rgb(163, 151, 151)
 }
+p  {
+    color:rgb(105, 90, 90);
+    font-family: courier;
+    font-size: 20px;
+    text-align: center;
+
+  }
+
+h4{
+    text-align: center; 
+    font-size: 25px;
+    color: rgb(163, 151, 151)
+
+h5{
+    text-align: center; 
+        font-size: 30px;
+        color:rgb(163, 151, 151) */ */
 
 /* <img src="abstract-pixelated-background_1048-7724.jpg" width="400" height="240">
 h1{ */ 
 
-body{
-    background-image: url("abstract-pixelated-background_1048-7724.jpg");
-}
+/* body{
+    background-image: url("abstract-pixelated-background_1048-7724 copy.jpg"); */
+    /* opacity: 0.3;
+        filter: alpha(opacity=30); */
+      /* } */
+    /* background-blend-mode:lighten 50; */
+
+
       
       /* .bg {background-image: 100px,100px,100px;
     height:100%;
@@ -42,3 +79,40 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 } */
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+
+padding-top: 20px;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+  background-color: #111;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+  background-color: red;
+}
+
+/* If you want the content centered horizontally and vertically */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the image inside the centered container, if needed */
+.centered img {
+  width: 150px;
+  border-radius: 50%;
+}
