--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ text-align: center;
 
 
 
-/* h1{
+h1{
     font-style: ariel
     text-align: center; 
     font-size: 70px; 
@@ -20,12 +20,12 @@ text-align: center;
 /* body {
     background-color: blue; */
 
-    /* button {
+    button {
         margin:auto;
         display:block;
       } */
 
-/* h1{
+h1{
     text-align: center;
     font-size: 50px;
     color: rgb(87, 102, 187)
@@ -58,7 +58,7 @@ h4{
 h5{
     text-align: center; 
         font-size: 30px;
-        color:rgb(163, 151, 151) */ */
+        color:rgb(163, 151, 151) */ 
 
 /* <img src="abstract-pixelated-background_1048-7724.jpg" width="400" height="240">
 h1{ */ 
@@ -79,7 +79,7 @@ h1{ */
   background-repeat: no-repeat;
   background-size: cover;
 } */
-.split {
+/* .split {
     height: 100%;
     width: 50%;
     position: fixed;
@@ -115,4 +115,4 @@ padding-top: 20px;
 .centered img {
   width: 150px;
   border-radius: 50%;
-}
+} */
