--- a/main.css
+++ b/main.css
@@ -1,18 +1,61 @@
-/* /* {body backgound-color: rgb; aliceblue; 
+#fullPage{
+  display:flex;
 }
-font-style: ariel;
+
+/* Split the screen in half */
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  /* Control the left side */
+  .left {
+    left: 0;
+    background-color: aliceblue;
+  }
+  
+  /* Control the right side */
+  .right {
+    right: 0;
+    background-color: rgba(130, 173, 228, 0.822);
+  }
+  
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .navbar{
+    display:flex;
+
+  }
+/*   
+  .centered img {
+    width: 150px;
+    border-radius: 50%;
+  } */
+
+
+/* font-style: courier;
 font-size: 20px;
 color: grey;
-text-align: center;
- */
+text-align: center; */
 
 
 
 /* h1{
-    font-style: ariel
+    font-style: ariel;
     text-align: center; 
-    font-size: 70px; 
-    color: blue;  */ */
+    font-size: 30px; 
+    color: blue;   */
 
    
 
@@ -20,53 +63,55 @@ text-align: center;
 /* body {
     background-color: blue; */
 
-    button {
-        margin:auto;
-        display:block;
-      } 
+button {
+  margin:auto;
+  display:block;
+  } 
 
 h1{
     text-align: center;
-    font-size: 50px;
-    color: rgb(87, 102, 187)
+    font-size: 35px;
+    color: rgb(87, 102, 187);
+    font-family: courier
 }
 
 h2{
     text-align: center;
-    font-size: 35px;
+    font-size: 20px;
+    font-family: courier;
     color: rgb(163, 151, 151)
 }
 
 h3{
     text-align: center; 
-    font-size: 25px;
-    color: rgb(163, 151, 151)
+    font-size: 18px;
+    color: rgb(163, 151, 151);
+    font-family: courier;
 }
 p  {
     color:rgb(105, 90, 90);
     font-family: courier;
-    font-size: 20px;
-    text-align: center;
+    font-size: 15px;
+    /* text-align: center; */
 
   }
 
 h4{
     text-align: center; 
-    font-size: 25px;
+    font-size: 20px;
+    font-family: courier;
     color: rgb(163, 151, 151)
 
-h5{
-    text-align: center; 
-        font-size: 30px;
-        color:rgb(163, 151, 151) 
+ 
+h5{    text-align: center; 
+        font-size: 20px;
+        font-family: courier;
+        color: grey rgb()
+} 
 
-/* <img src="abstract-pixelated-background_1048-7724.jpg" width="400" height="240">
-h1{ */ 
-
-/* body{
-    background-image: url("abstract-pixelated-background_1048-7724 copy.jpg"); */
-    /* opacity: 0.3;
-        filter: alpha(opacity=30); */
-      /* } */
-    /* background-blend-mode:lighten 50; */
+h6{ text-align: center; 
+  font-size: 20px;
+  font-family: courier;
+  color: grey rgb()
+}
 
