--- a/main.css
+++ b/main.css
@@ -82,6 +82,8 @@ h2{
     color: rgb(163, 151, 151)
 }
 
+.backgroundColor{ background-color: cadetblue};
+
 h3{
     text-align: center; 
     font-size: 18px;
