--- a/main.css
+++ b/main.css
@@ -75,11 +75,15 @@ h1{
     font-family: courier
 }
 
+.mainTitle{
+  margin-top: 150px;
+}
+
 h2{
     text-align: center;
     font-size: 20px;
     font-family: courier;
-    color: rgb(163, 151, 151)
+    color:rgb()
 }
 
 .backgroundColor{ background-color: cadetblue};
